Helloコントローラーの機能を拡張し、フォーム処理を追加。新しいRegisterコントローラーとSampleFormクラスを作成。Thymeleafテンプレートを追加し、ユーザー入力を処理するためのHTMLフォームを実装。

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="ja" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
-    <a href="/hello/main">CLICK</a>
-
-    <h1 th:text="${msg}">表示される部分</h1>
-
+    <p th:text="${msg}"></p>
 </body>
 </html>
